<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="@dimen/elevation">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:collapsedTitleTextAppearance="@style/Toolbar.SmallTextAppearance"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMargin="16dp"
            app:expandedTitleTextAppearance="@style/Toolbar.LargeTextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="true">

            <ImageView
                android:id="@+id/mojo_item_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_large_height"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="false"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_white" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_height"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mojo_item_name_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

            <TextView
                android:id="@+id/mojo_item_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/quantity_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

            <ViewSwitcher
                android:id="@+id/quantity_view_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/quantity_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/quantity_array" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/quantity_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity_edit_text_hint"
                    android:imeActionLabel="@string/action_done"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:lines="1"
                    android:text="@string/quantity_initial_value"
                    android:textColorHint="@color/text_hint" />

            </ViewSwitcher>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/toppings_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

            <TextView
                android:id="@+id/no_topping_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/no_topping_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/topping_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/item_note_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/note_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/edit_note_hint"
                    android:imeActionLabel="@string/action_done"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:lines="1"
                    android:paddingEnd="40dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="40dp"
                    android:paddingStart="0dp"
                    android:textColor="@color/text_normal"
                    android:textColorHint="@color/text_hint"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/note_clear_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_edit_text_clear"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/edit_action_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom"
        android:background="@drawable/button_state"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Button.Normal" />

</android.support.design.widget.CoordinatorLayout>
