<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/edit_action_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_state"
        android:textAppearance="@style/TextAppearance.AppCompat.Button.Normal"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/edit_action_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/quantity_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

            <ViewSwitcher
                android:id="@+id/quantity_view_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/quantity_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/quantity_array" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/quantity_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/action_done"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="@string/quantity_initial_value" />

            </ViewSwitcher>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/toppings_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Hint" />

            <TextView
                android:id="@+id/no_topping_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/no_topping_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/topping_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/note_edit_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Hint">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/note_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="@string/edit_note_hint"
                        android:paddingEnd="40dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="40dp"
                        android:paddingStart="0dp"
                        android:singleLine="true"
                        android:textColor="@color/text_normal"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/note_clear_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_edit_text_clear"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>